--- a/app/src/main/res/values-ar-rSA/strings.xml
+++ b/app/src/main/res/values-ar-rSA/strings.xml
@@ -96,4 +96,60 @@
     <string name="password_not_match">كلمة السر غير متطابقة</string>
     <string name="updating_password">تحديث كلمة المرور</string>
     <string name="dish_price_delegate">صحن سعر :</string>
+    <string name="continue_button">استمر</string>
+    <string name="loading_kitchens_dialog">جار تحميل مطابخ …</string>
+    <string name="login_progress_dialog">تسجيل الدخول..</string>
+    <string name="emai_error">يرجى تقديم عنوان بريد إلكتروني صالح</string>
+    <string name="password_error">أدخل الحد الأدنى 4 أحرف أبجدية رقمية</string>
+    <string name="add_dish_navigation">إضافة طبق</string>
+    <string name="update_profile_navigation">تحديث الملف</string>
+    <string name="change_password">تغيير كلمة السر</string>
+    <string name="logout">الخروج</string>
+    <string name="email_error">يرجى تقديم عنوان بريد إلكتروني صالح</string>
+    <string name="recovery_message">يرجى التحقق من بريدك الإلكتروني لكلمة مرور جديدة</string>
+    <string name="recovery_failed">أخفق الاسترداد!</string>
+    <string name="valid_email">تقديم عنوان بريد إلكتروني صحيح</string>
+    <string name="recovery_email">جار إرسال بريد الاسترداد</string>
+    <string name="password_character">أدخل 3 أحرف على الأقل</string>
+    <string name="resting_password">استعادة كلمة المرور</string>
+    <string name="resetting_failed">أخفقت إعادة التعيين!</string>
+    <string name="old_password">كلمة المرور القديمة غير صحيحة</string>
+    <string name="your_password_changed">تم تغيير كلمة المرور بنجاح</string>
+    <string name="monday">الإثنين</string>
+    <string name="tuesday">الثلاثاء</string>
+    <string name="wednesday">الأربعاء</string>
+    <string name="thursday">الخميس</string>
+    <string name="friday">يوم الجمعة</string>
+    <string name="saturday">يوم السبت</string>
+    <string name="sunday">الأحد</string>
+    <string name="button_continue">استمر</string>
+    <string name="camera_storage_permission">كاميرا وتخزين إذن المطلوبة لهذا التطبيق</string>
+    <string name="go_settings_permission">انتقل إلى الإعدادات وتمكين الأذونات</string>
+    <string name="ok_button">حسنا</string>
+    <string name="take_photo">تصوير</string>
+    <string name="choose_library">اختر من المكتبة</string>
+    <string name="cancel_photo">إلغاء</string>
+    <string name="select_photo">اختر الصور</string>
+    <string name="select_file">حدد ملف</string>
+    <string name="photo_cancel">إلغاء</string>
+    <string name="restaurant_name">يرجى تقديم اسم المطعم</string>
+    <string name="password_characters_four">أدخل 4 أحرف على الأقل</string>
+    <string name="password_does_not_match">كلمة السر غير متطابقة</string>
+    <string name="select_time">حدد الوقت</string>
+    <string name="activation_code_send_message">تم إرسال رمز التنشيط لك! تفقد بريدك الالكتروني من فضلك</string>
+    <string name="registering_kitchen">جار تسجيل المطبخ …</string>
+    <string name="update_profile_message">جار تحديث الملف الشخصي …</string>
+    <string name="update_title">تحديث</string>
+    <string name="provide_dish_name">يرجى تقديم اسم الطبق</string>
+    <string name="provide_dish_price">يرجى تقديم سعر الطبق</string>
+    <string name="provide_dish_description">يرجى وصف أوصاف ماكس 120 كلمة</string>
+    <string name="adding_dish">جار إضافة طبق …</string>
+    <string name="updating_message">تحديث…</string>
+    <string name="all_dishes">جميع الأطباق</string>
+    <string name="delete_title">حذف</string>
+    <string name="delete_dish">هل تريد حذف هذا الطبق؟</string>
+    <string name="button_yes">نعم فعلا</string>
+    <string name="button_no">لا</string>
+    <string name="confirmation_title">التأكيد</string>
+    <string name="logout_dialog">هل تريد حقا الخروج؟</string>
 </resources>
