--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,4 +96,60 @@
     <string name="password_not_match">password does not match</string>
     <string name="updating_password">Updating your password</string>
     <string name="dish_price_delegate">Dish Price :</string>
+    <string name="continue_button">Continue</string>
+    <string name="loading_kitchens_dialog">Loading Kitchens…</string>
+    <string name="login_progress_dialog">Logging In..</string>
+    <string name="emai_error">please provide a valid email</string>
+    <string name="password_error">Enter minimum 4 alphanumeric characters</string>
+    <string name="add_dish_navigation">Add Dish</string>
+    <string name="update_profile_navigation">Update Profile</string>
+    <string name="change_password">Change Password</string>
+    <string name="logout">Logout</string>
+    <string name="email_error">please provide a valid email</string>
+    <string name="recovery_message">Please check your Email for new password</string>
+    <string name="recovery_failed">Recovery Failed!</string>
+    <string name="valid_email">provide a valid EmailAddress</string>
+    <string name="recovery_email">Sending Recovery Mail</string>
+    <string name="password_character">enter at least 3 characters</string>
+    <string name="resting_password">Resting your password</string>
+    <string name="resetting_failed">Resetting Failed!</string>
+    <string name="old_password">old Password is wrong</string>
+    <string name="your_password_changed">Your password successfully changed</string>
+    <string name="monday">Mon</string>
+    <string name="tuesday">Tue</string>
+    <string name="wednesday">Wed</string>
+    <string name="thursday">Thu</string>
+    <string name="friday">Fri</string>
+    <string name="saturday">Sat</string>
+    <string name="sunday">Sun</string>
+    <string name="button_continue">Continue</string>
+    <string name="camera_storage_permission">Camera and Storage Permission required for this app</string>
+    <string name="go_settings_permission">Go to settings and enable permissions</string>
+    <string name="ok_button">OK</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="choose_library">Choose from Library</string>
+    <string name="cancel_photo">Cancel</string>
+    <string name="select_photo">Select Photo</string>
+    <string name="select_file">Select File</string>
+    <string name="photo_cancel">Cancel</string>
+    <string name="restaurant_name">please provide restaurant name</string>
+    <string name="password_characters_four">enter at least 4 characters</string>
+    <string name="password_does_not_match">password does not match</string>
+    <string name="select_time">Select Time</string>
+    <string name="activation_code_send_message">Activation code has been sent to you! Please check your Email</string>
+    <string name="registering_kitchen">Registering Kitchen…</string>
+    <string name="update_profile_message">updating profile…</string>
+    <string name="update_title">Update</string>
+    <string name="provide_dish_name">please provide dish name</string>
+    <string name="provide_dish_price">please provide dish price</string>
+    <string name="provide_dish_description">please dish descriptions max 120 word</string>
+    <string name="adding_dish">Adding Dish…</string>
+    <string name="updating_message">Updating…</string>
+    <string name="all_dishes">All Dishes</string>
+    <string name="delete_title">Delete</string>
+    <string name="delete_dish">Do you want to delete this dish?</string>
+    <string name="button_yes">Yes</string>
+    <string name="button_no">No</string>
+    <string name="confirmation_title">Confirmation</string>
+    <string name="logout_dialog">Do you really want to logout?</string>
 </resources>
